// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tests renders the Tabs component 1`] = `
<div>
  <div
    class="tabs"
    role="tablist"
  >
    <div
      class="react-horizontal-scrolling-menu--wrapper border-base-lighter border-bottom margin-top-1"
    >
      <div
        class="react-horizontal-scrolling-menu--scroll-container "
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="tab1"
        >
          <div
            aria-controls="tab1-panel"
            aria-label="Active Tab Tab 1"
            aria-selected="true"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md border-bottom-05 border-base-darker"
            id="tab1-tab"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="tab1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="tab2"
        >
          <div
            aria-controls="tab2-panel"
            aria-label="Tab Tab 2"
            aria-selected="false"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
            id="tab2-tab"
            role="tab"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="tab-content"
      id="tab1-panel"
      role="tabpanel"
    >
      Tab 1
    </div>
    <div
      id="tab2-panel"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`Tabs tests renders the Tabs component with default tab 2 selected 1`] = `
<div>
  <div
    class="tabs"
    role="tablist"
  >
    <div
      class="react-horizontal-scrolling-menu--wrapper border-base-lighter border-bottom margin-top-1"
    >
      <div
        class="react-horizontal-scrolling-menu--scroll-container "
      >
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="0"
          data-key="tab1"
        >
          <div
            aria-controls="tab1-panel"
            aria-label="Tab Tab 1"
            aria-selected="false"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md"
            id="tab1-tab"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="react-horizontal-scrolling-menu--separator "
          data-index="0.1"
          data-key="tab1-separator"
        />
        <div
          class="react-horizontal-scrolling-menu--item "
          data-index="1"
          data-key="tab2"
        >
          <div
            aria-controls="tab2-panel"
            aria-label="Active Tab Tab 2"
            aria-selected="true"
            class="tab display-inline-block padding-x-2 padding-y-105 text-bold font-sans-md border-bottom-05 border-base-darker"
            id="tab2-tab"
            role="tab"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
      </div>
    </div>
    <div
      id="tab1-panel"
      role="tabpanel"
    />
    <div
      class="tab-content"
      id="tab2-panel"
      role="tabpanel"
    >
      Tab 2
    </div>
  </div>
</div>
`;
